--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 
         <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
           <li><a href="#" class="nav-link px-2 text-secondary">Home</a></li>
-          <li><a href="#" class="nav-link px-2 text-white">Features</a></li>
-          <li><a href="#" class="nav-link px-2 text-white">Pricing</a></li>
-          <li><a href="#" class="nav-link px-2 text-white">FAQs</a></li>
-          <li><a href="#" class="nav-link px-2 text-white">About</a></li>
+          <li><a href="#" class="nav-link px-2 text-white">Best Seller</a></li>
+          <li><a href="#" class="nav-link px-2 text-white">Trending</a></li>
+          <li><a href="#" class="nav-link px-2 text-white">Books</a></li>
+          <li><a href="#" class="nav-link px-2 text-white">All</a></li>
         </ul>
 <div class="sec">
         <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
@@ -43,13 +43,13 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="crausel.jpg" height="500px" width="500px" class="d-block w-100" alt="../">
+            <img src="images/img2.jpg" height="400px"  class="d-block w-100" alt="../">
           </div>
           <div class="carousel-item">
-            <img src="..." class="d-block w-100" alt="...">
+            <img src="images/img_3.jpg" height="400px" class="d-block w-100" alt="..">
           </div>
           <div class="carousel-item">
-            <img src="..." class="d-block w-100" alt="...">
+            <img src="images/img_4.jpg" height="400px" `class="d-block w-100" alt="...">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
