--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
           <input type="search" class="search form-control form-control-dark text-bg-dark" placeholder="Search..." aria-label="Search">
         </form>
 
-        <div class="text-end">
+       <!-- <div class="text-end">
           <button type="button" class="btn login btn-outline-light me-2">Login</button>
           <button type="button" class="btn Sign btn-warning">Sign-up</button>
-        </div>
+        </div>-->
       </div>
     </div>
     </div>
